Add simple health check switch. Update dependencies
